@@ -83,6 +83,9 @@ class ApiQuerySiteinfo extends ApiQueryBase {
 				case 'rightsinfo':
 					$fit = $this->appendRightsInfo( $p );
 					break;
+				case 'languages':
+					$fit = $this->appendLanguages( $p );
+					break;
 				default :
 					ApiBase :: dieDebug( __METHOD__, "Unknown prop=$p" );
 			}
@@ -389,6 +392,18 @@ class ApiQuerySiteinfo extends ApiQueryBase {
 		return $this->getResult()->addValue( 'query', $property, $data );
 	}
 
+	public function appendLanguages( $property ) {
+		global $wgLanguageNames;
+		$data = array();
+		foreach( $wgLanguageNames as $code => $name ) {
+			$lang = array( 'code' => $code );
+			ApiResult::setContent( $lang, $name );
+			$data[] = $lang;
+		}
+		$this->getResult()->setIndexedTagName( $data, 'lang' );
+		return $this->getResult()->addValue( 'query', $property, $data );
+	}
+
 
 	public function getAllowedParams() {
 		return array(
@@ -408,6 +423,7 @@ class ApiQuerySiteinfo extends ApiQueryBase {
 					'extensions',
 					'fileextensions',
 					'rightsinfo',
+					'languages',
 				)
 			),
 			'filteriw' => array(
@@ -436,6 +452,7 @@ class ApiQuerySiteinfo extends ApiQueryBase {
 				' extensions   - Returns extensions installed on the wiki',
 				' fileextensions - Returns list of file extensions allowed to be uploaded',
 				' rightsinfo   - Returns wiki rights (license) information if available',
+				' languages    - Returns a list of languages MediaWiki supports',
 			),
 			'filteriw' =>  'Return only local or only nonlocal entries of the interwiki map',
 			'showalldb' => 'List all database servers, not just the one lagging the most',
